--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="app.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -18,8 +19,8 @@
             <h1>
                 TopLingo
             </h1>
-            <button id="button">
-                <img class="" src="./img/lua.png" alt="lua">
+            <button id="button-theme">
+                <img src="./img/lua.png" alt="lua">
             </button>
         </div>
     </header>
