--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img src="./img/brasil.svg" alt="brasil">
             </div>
             <div class="ingles">
-                <input class="result-traducao" type="text" placeholder="Olá Word!!">
+                <input class="result-traducao" type="text" placeholder="!!">
                 <img src="./img/eua.svg" alt="eua">
             </div>
         </div>
