--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
+    <script src="./js/app.js" defer></script>
+    <script src="/js/traducao.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -27,11 +28,11 @@
     <main>
         <div class="tradutor">
             <div class="portugues">
-                <input type="text" placeholder="Olá mundo!!">
+                <input id="entrada" type="text" placeholder="Olá mundo!!">
                 <img src="./img/brasil.svg" alt="brasil">
             </div>
             <div class="ingles">
-                <input class="result-traducao" type="text" placeholder="Hello World!!">
+                <input id="traducao" class="result-traducao" type="text" placeholder="Hello World!!">
                 <img src="./img/eua.svg" alt="eua">
             </div>
         </div>
